cmake_minimum_required(VERSION 3.10)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 11)
project(test LANGUAGES C CXX)
list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
include(utils)


list(APPEND DEBUGLIST Debug RelWithDebInfo)
isInList(DEBUGLIST ${CMAKE_BUILD_TYPE} RESULT)
if(${RESULT})
    set(SHARED)
else()
    set(SHARED SHARED)
endif()
set(TARGEOUT ${CMAKE_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH ${TARGEOUT}/bin)
set(EXECUTABLE_OUTPUT_PATH ${TARGEOUT}/bin)
add_executable(${PROJECT_NAME} test.cpp)
add_subdirectory(Pdf)
report(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})